# NiceGui-App-Template

./: LICENSE  README.md  dev_run.py  pyproject.toml  requirements.txt  settings.toml
docs/: development-environment.md  logger.md  project-structure.md  run-the-app.md  settings.md  states.md
src/nicegui_app_template/: __init__.py  __main__.py  app.py  app1.py
src/nicegui_app_template/core/: __init__.py  helpers.py  logger.py  logger_resolver.py  settings.py  state.py
src/nicegui_app_template/services/: __init__.py
src/nicegui_app_template/ui/: __init__.py  index.py
src/nicegui_app_template/ui/layout/: __init__.py  drawer.py  footer.py  menu.py  navbar.py
src/nicegui_app_template/ui/pages/: __init__.py  about.py  hello.py  home.py  home_page.py  settings_page.py
src/nicegui_app_template/ui/theme/: __init__.py  assets.py  custom_css.py
src/nicegui_app_template/ui/viewmodels/: settings_vm.py
tests/: test_logger.py  test_math.py  test_settings.py
tests/core/: test_helpers.py  test_logger.py  test_logger_resolver.py  test_settings.py  test_state.py
