[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nicegui-app-template"
version = "0.1.0"
description = "NiceGUI app template (Windows-first)"
requires-python = ">=3.13"
dependencies = [
  "nicegui",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
