# pyproject.toml

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nicegui-app-template"
version = "0.1.1a0"
description = "NiceGUI App Template (Windows-first)"
requires-python = "==3.13.*"
dependencies = ["nicegui>=3.4.1"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py313"
line-length = 88
